fixed wrong font directory lol

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face
    font-family: 'arial';
-   src: url(font/arial.woff2);
+   src: url(assets/font/arial.woff2);
 }
 h1 {
 	font-family: 'arial', 'arial';
